[project]
name = "codex-listener"
version = "0.1.2"
description = "A daemon that lets AI agents orchestrate OpenAI Codex CLI tasks"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Alex Tang", email = "talexcks@gmail.com" },
]
keywords = ["codex", "ai", "agent", "daemon", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "qq-botpy>=1.2.1",
]

[project.urls]
Homepage = "https://github.com/TalexCK/Codex-Listener"
Repository = "https://github.com/TalexCK/Codex-Listener"
Issues = "https://github.com/TalexCK/Codex-Listener/issues"

[project.scripts]
codex-listener = "codex_listener.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_listener"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
